# chuk-api

./: .gitignore  README.md  pyproject.toml  setup.cfg
docs/: 404.html  index.html  objects.inv
docs_src/: mkdocs.yml
docs_src/docs/: index.md
scripts/: sync.sh
src/eocis_chuk_api/: __init__.py  chuk_auxilary_utils.py  chuk_dataset.py  chuk_dataset_utils.py  chuk_metadata.py  chukio.py  chukmeta.py
src/eocis_chuk_api/tools/: download_grid.py
test/eocis_chuk_api_tests/: tif_export.py
test/eocis_chuk_api_tests/test_utils/: test_data_generator.py  test_utils.py
test/eocis_chuk_api_tests/unit_tests/: test_auxilary_utils.py  test_dataset_creation.py  test_tiff_export.py
utils/: convert_auxilary_metadata.py  convert_to_tiff.py  sample_dataset.py
