[metadata]
name = eocis_chuk_api
version = attr: eocis_chuk_api.VERSION
author = Niall McCarroll
author_email = n.f.mccarroll@reading.ac.uk
description = API for helping with CHUK data format and processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eocis-chuk/chuk-api
project_urls =
    Bug Tracker = https://github.com/eocis-chuk/chuk-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    download_grid = eocis_chuk_api.tools.download_grid:main
    sample_dataset = eocis_chuk_api.tools.sample_dataset:main


[options.packages.find]
where = src

